# elftool

./: Cargo.toml
examples/readelf/: main.rs
examples/readelf-clone/: main.rs
src/: elf.rs  lib.rs  repr.rs
src/elf/: header.rs  mod.rs  repr.rs  section.rs  segment.rs  symbol.rs
src/machines/: mod.rs  riscv.rs
src/reader/: mod.rs  reader.rs
