[package]
name = "elftool"
version = "0.1.0"
edition = "2024"

[dependencies]
binlayout = { git = "https://github.com/H-Cebrecos/binlayout"}

[features]
default = ["reader"]
reader  = []
writer  = []
riscv   = []


[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[lints.rust]
ambiguous_negative_literals = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
